--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Hello World !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Le Pré aux Abeilles</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background-color: floralwhite;
+      overflow-x: hidden;
+    }
+
+    @font-face {
+      font-family: Philo;
+      src: url("assets/Philosopher-Regular.ttf") format("truetype");
+    }
+
+    * {
+      font-family: Philo !important;
+      text-align: center;
+    }
+
+    .banner {
+      width: 100vw;
+      height: 35vh;
+      line-height: 35vh;
+      background-image: url("assets/prairie_et_bois.JPG");
+      background-position: top;
+      background-size: cover;
+    }
+    
+    .banner span {
+      font-size: 10vh;
+      color: black;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: normal;
+    }
+    
+    p {
+      width: 65vw;
+      margin: 1em auto 1em auto;
+    }
+
+    div {
+      width: 65vw;
+      margin: 1em auto 1em auto;
+      padding: .5em;
+    }
+
+    .imageshow {
+      width: 100vw;
+      text-align: center;
+    }
+
+    .imageshow img {
+      width: 30vw;
+      height: 30vw;
+      object-fit: cover;
+      margin: .5vw;
+    }
+
+  </style>
+</head>
+<body>
+  <h1 class="banner"><span>Le Pré aux Abeilles</span></h1>
+  <h1>Bienvenue</h1>
+  <p>Niché sur les hauteurs du pays d'Excideuil en Périgord vert, le Pré aux Abeilles s'intègre dans un paysage de prairies parsemées d'étangs, sillonné de rivières et de vallées forestières. Au cœur d'une nature généreuse, nous y élevons des abeilles et y cultivons, récoltons et transformons des plantes aromatiques et médicinales.</p>
+  <p>Notre production est certifiée en agriculture biologique par Certipaq.</p>
+  <div style="background-color: rgb(255, 200, 0);">
+    <h3>Nos produits :</h3>
+    <p>Miels - Aromates – Tisanes</p>
+  </div>
+  <div style="background-color: rgb(239, 210, 104);">
+    <h3>Contact :</h3>
+    <p>
+      <a href="mailto:lepreauxabeilles@gmail.com">lepreauxabeilles@gmail.com</a> <br><br>
+      2200 route des Coteaux <br> 24160 Clermont d'Excideuil <br><br>
+      Visites sur rendez-vous uniquement <br><br>
+      EI Le Pré aux Abeilles <br> Siret : 938 105 913 000 17 <br> Code APE : 0149Z</p>
+  </div>
+  <div style="background-color: rgb(242, 227, 173);" class="imageshow">
+    <img src="assets/houblon.jpg">
+    <img src="assets/cecile_cueillette.JPG">
+    <img src="assets/Reine_sur_cadre.jpg">
+  </div>
+  <p>À l'image de notre projet agricole, ce site est en cours de construction et s'enrichira au fil des saisons :)</p>
+</body>
+</html>
