--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .banner {
-      width: 100vw;
+      width: 100%;
       height: 35vh;
       line-height: 35vh;
       background-image: url("assets/prairie_et_bois.JPG");
@@ -51,8 +51,8 @@
     }
 
     .imageshow {
-      width: 100vw;
-      text-align: center;
+      width: 100%;
+      padding: .5em 0 .5em 0;
     }
 
     .imageshow img {
