--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="rVUCSK3aZHw1DzJ81I-Et2Rv4Me3mCAs2ooRyj1kKnU" />
   <title>Le Pré aux Abeilles</title>
   <style>
     html, body {
