--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="rVUCSK3aZHw1DzJ81I-Et2Rv4Me3mCAs2ooRyj1kKnU" />
+  <meta name="description" content="Le Pré aux Abeilles est un projet agricole situé à Clermont d'Excideuil, en Dordogne, produisant miels, tisanes et autres aromates.">
   <title>Le Pré aux Abeilles</title>
   <style>
     html, body {
@@ -67,12 +68,12 @@
 </head>
 <body>
   <h1 class="banner"><span>Le Pré aux Abeilles</span></h1>
-  <h1>Bienvenue</h1>
+  <h2>Bienvenue</h2>
   <p>Niché sur les hauteurs du pays d'Excideuil en Périgord vert, le Pré aux Abeilles s'intègre dans un paysage de prairies parsemées d'étangs, sillonné de rivières et de vallées forestières. Au cœur d'une nature généreuse, nous y élevons des abeilles et y cultivons, récoltons et transformons des plantes aromatiques et médicinales.</p>
   <p>Notre production est certifiée en agriculture biologique par Certipaq.</p>
   <div style="background-color: rgb(255, 200, 0);">
     <h3>Nos produits :</h3>
-    <p>Miels - Aromates – Tisanes</p>
+    <p>Miels - Aromates - Tisanes</p>
   </div>
   <div style="background-color: rgb(239, 210, 104);">
     <h3>Contact :</h3>
@@ -83,9 +84,9 @@
       EI Le Pré aux Abeilles <br> Siret : 938 105 913 000 17 <br> Code APE : 0149Z</p>
   </div>
   <div style="background-color: rgb(242, 227, 173);" class="imageshow">
-    <img src="assets/houblon.jpg">
-    <img src="assets/cecile_cueillette.JPG">
-    <img src="assets/Reine_sur_cadre.jpg">
+    <img src="assets/houblon.jpg" alt="Récolte de houblon">
+    <img src="assets/cecile_cueillette.JPG" alt="Cueillette à la main">
+    <img src="assets/Reine_sur_cadre.jpg" alt="Reine sur cadre, entourée de ses ouvrières">
   </div>
   <p>À l'image de notre projet agricole, ce site est en cours de construction et s'enrichira au fil des saisons :)</p>
 </body>
